--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 		<header class="productTitle">
 			<h2>Product Title</h2>
 		</header>
-		<div class="flex description">
+		<section class="flex description">
 			<img class="productImage" src="http://i.imgur.com/ju8TpTo.gif" width="100" height="100">
 			<p class="productDescription">description of product</p>
 		  <p class="avail">availability of product</p>
-		</div>
-		<div class="specifications">
+		</section>
+		<section class="specifications">
 			<header>Specificiations</header>
 			<p>Size</p>
 			<p>Weight</p>
 			<footer>product specifications become invalid when</footer>
-		</div>
-		<div class="pricing">
+		</section>
+		<section class="pricing">
 			<header>Pricing</header>
 			<p>price 1</p>
 			<p>price 2</p>
 			<p>price 3</p>
-		</div>
+		</section>
 	</article>
 	
 	
