added 4th placeholder card

--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
 			<p>price 3</p>
 		</section>
 	</article>
+	<article class="flex">
+		<header class="productTitle">
+			<h2>Product Title4</h2>
+		</header>
+		<section class="flex description">
+			<img class="productImage" src="http://i.imgur.com/ju8TpTo.gif" width="100" height="100">
+			<p class="productDescription">description of product</p>
+		  <p class="avail">availability of product</p>
+		</section>
+		<section class="specifications">
+			<header>Specificiations</header>
+			<p>Size</p>
+			<p>Weight</p>
+			<footer>product specifications become invalid when</footer>
+		</section>
+		<section class="pricing">
+			<header>Pricing</header>
+			<p>price 1</p>
+			<p>price 2</p>
+			<p>price 3</p>
+		</section>
+	</article>
 	
 	
 
