--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 <body class="flex">
 	<article class="flex">
 		<header class="productTitle">
-			<h2>Product Title</h2>
+			<h2>Phantom Cat Arm</h2>
 		</header>
 		<section class="flex description">
 			<img class="productImage" src="http://i.imgur.com/ju8TpTo.gif" width="100" height="100">
-			<p class="productDescription">description of product</p>
-		  <p class="avail">availability of product</p>
+			<p class="productDescription">arm of a cat that will magically come in and knock over your game board pieces</p>
+		  <p class="avail">Product is Currently not available</p>
 		</section>
 		<section class="specifications">
 			<header>Specificiations</header>
-			<p>Size</p>
-			<p>Weight</p>
-			<footer>product specifications become invalid when</footer>
+			<p>Size: 8 inches</p>
+			<p>Weight: 5 oz</p>
+			<footer>product becomes invalid when used without actual cat</footer>
 		</section>
 		<section class="pricing">
 			<header>Pricing</header>
-			<p>price 1</p>
-			<p>price 2</p>
-			<p>price 3</p>
+			<p>1 -5: $5/each</p>
+			<p>5 - 10: $4/each</p>
+			<p>10-15: $3/each</p>
 		</section>
 	</article>
 	<article class="flex">
