keeper content added to card 2

--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 	</article>
 	<article class="flex">
 		<header class="productTitle">
-			<h2>Product Title2</h2>
+			<h2>Magic Does-Your-Hair-For-You-er</h2>
 		</header>
 		<section class="flex description">
-			<img class="productImage" src="http://i.imgur.com/ju8TpTo.gif" width="100" height="100">
-			<p class="productDescription">description of product</p>
-		  <p class="avail">availability of product</p>
+			<img class="productImage" src="http://i.imgur.com/Q2VwXBP.jpg" width="100" height="100">
+			<p class="productDescription">illustrated arms come in and effortlessly style your hair for you each morning.</p>
+		  <p class="avail">Will be available soon</p>
 		</section>
 		<section class="specifications">
 			<header>Specificiations</header>
-			<p>Size</p>
-			<p>Weight</p>
-			<footer>product specifications become invalid when</footer>
+			<p>Size: 24" by 5"</p>
+			<p>Weight: 2 pounds</p>
+			<footer>product will not actually style your hair beyond your current hair styling skills</footer>
 		</section>
 		<section class="pricing">
 			<header>Pricing</header>
-			<p>price 1</p>
-			<p>price 2</p>
-			<p>price 3</p>
+			<p>2-10: $100/each</p>
+			<p>12-30: $90/each</p>
+			<p>32 +: $80/each</p>
 		</section>
 	</article>
 	<article class="flex">
