keeper content for card 3

--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
 	</article>
 	<article class="flex">
 		<header class="productTitle">
-			<h2>Product Title3</h2>
+			<h2>Entropy Generator</h2>
 		</header>
 		<section class="flex description">
-			<img class="productImage" src="http://i.imgur.com/ju8TpTo.gif" width="100" height="100">
-			<p class="productDescription">description of product</p>
-		  <p class="avail">availability of product</p>
+			<img class="productImage" src="http://i.imgur.com/VBAzemA.gif" width="100" height="100">
+			<p class="productDescription">Effortlessly creates entropy in any open or closed system</p>
+		  <p class="avail">Product available in all areas</p>
 		</section>
 		<section class="specifications">
 			<header>Specificiations</header>
-			<p>Size</p>
-			<p>Weight</p>
-			<footer>product specifications become invalid when</footer>
+			<p>Size: none</p>
+			<p>Weight: none</p>
+			<footer>product results are given regardless of the desire of said product results</footer>
 		</section>
 		<section class="pricing">
 			<header>Pricing</header>
-			<p>price 1</p>
-			<p>price 2</p>
-			<p>price 3</p>
+			<p>1-5 instances: $1000</p>
+			<p>5-100 instances: $10</p>
+			<p>100+ instances: no charge</p>
 		</section>
 	</article>
 	<article class="flex">
