--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
 	</article>
 	<article class="flex">
 		<header class="productTitle">
-			<h2>Product Title4</h2>
+			<h2>Chocolate Chip Cookies</h2>
 		</header>
 		<section class="flex description">
-			<img class="productImage" src="http://i.imgur.com/ju8TpTo.gif" width="100" height="100">
-			<p class="productDescription">description of product</p>
-		  <p class="avail">availability of product</p>
+			<img class="productImage" src="http://i.imgur.com/0dbibo9.jpg" width="100" height="100">
+			<p class="productDescription">Warm, delicious chocolate chip cookies made with real butter</p>
+		  <p class="avail">availablity subject to proximity to grandmothers</p>
 		</section>
 		<section class="specifications">
 			<header>Specificiations</header>
-			<p>Size</p>
-			<p>Weight</p>
-			<footer>product specifications become invalid when</footer>
+			<p>Size: 3"</p>
+			<p>Weight: 4 oz</p>
+			<footer>product will not be warm if it is cool</footer>
 		</section>
 		<section class="pricing">
 			<header>Pricing</header>
-			<p>price 1</p>
-			<p>price 2</p>
-			<p>price 3</p>
+			<p>1-12: $3/each</p>
+			<p>2-24: $2.50/each</p>
+			<p>25+: $2.25/each</p>
 		</section>
 	</article>
 	
